--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "armenia",
-  "homepage": "http://ajmasta.github.io/karabagh",
+  "homepage": "https://ajmasta.github.io/Karabagh/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
