--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-ga": "^3.1.2",
     "react-https-redirect": "^1.1.0",
     "react-router-dom": "^5.2.0",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
